# simple-smt-ocaml

./: dune-project  simple_smt.opam
lib/: simple_smt.ml
